[package]
name = "plato-history"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Historical data storage and time-series queries for PLATO room readings"
repository = "https://github.com/SuperInstance/plato-history"

[dev-dependencies]
serde_json = "1"

[dependencies]
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
